--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script>
+      HTMLElement.prototype.setZoomLevel = function (zoomLevel) {
+        this.style.zoom = zoomLevel;
+      };
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
